gcc/testsuite/rust/rustc/ui/lifetimes/lifetime-errors/ex3-both-anon-regions-both-are-structs.rs
struct Ref<'a> {
    x: &'a u32,
}

fn foo(mut x: Vec<Ref>, y: Ref) {
    x.push(y); // { dg-error ".E0623." "" { target *-*-* } }
}

fn main() {}

